<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodMenuDetailActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/salmon_sashimi"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item Name"
            android:textSize="24sp"/>
        <TextView
            android:id="@+id/tv_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_item_name"
            android:layout_toRightOf="@id/tv_item_name"
            android:text="@string/price"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:textAlignment="textEnd"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container_tv_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="16sp"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp">
            <ImageButton
                android:id="@+id/btn_minus_quantity"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/btn_minus"/>
            <TextView
                android:id="@+id/tv_item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qty"
                android:layout_toEndOf="@id/btn_minus_quantity"
                android:textSize="16sp"
                android:textAlignment="center"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"/>
            <ImageButton
                android:id="@+id/btn_plus_quantity"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_toEndOf="@id/tv_item_quantity"
                android:layout_toRightOf="@id/tv_item_quantity"
                android:background="@drawable/btn_plus"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional_note"/>
        <EditText
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:background="@drawable/textbox_background"
            android:padding="8dp"
            android:textSize="12sp"/>
        <TextView
            android:id="@+id/tv_total_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/total_item_price"
            android:textAlignment="textEnd"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/btn_addToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>